--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "happy-dom": "^7.7.0",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3",
     "vite": "^3.2.3",
