--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "parse-duration": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
   },
