--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.6.0",
+    "react-image-crop": "^10.0.8",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
