--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm ci
+      - run: npm test
       - run: npm run build --if-present
       # Run our deployment command
       - name: Deploy to GitHub Pages
