--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-image-crop": "^10.0.9",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
