--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.10.0",
@@ -32,6 +33,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@vitejs/plugin-react": "^4.0.0",
