--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-image-crop": "^10.0.9",
     "react-router-dom": "^6.21.0",
+    "recharts": "^3.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
